Fix dark mode and add video

--- a/src/mvp.css
+++ b/src/mvp.css
@@ -13,7 +13,7 @@
   --color-secondary-accent: #920de90b;
   --color-shadow: #f4f4f4;
   --color-table: #118bee;
-  --color-text: #000;
+  --color-text: #333;
   --color-text-secondary: #999;
   --font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
     Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif;
@@ -29,12 +29,12 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --color: #0097fc;
+    --color: #ff6868;
     --color-accent: #0097fc4f;
-    --color-bg: #333;
-    --color-bg-secondary: #555;
+    --color-bg: rgb(27, 31, 51);
+    --color-bg-secondary: rgb(47, 48, 65);
     --color-link: #0097fc;
-    --color-secondary: #e20de9;
+    --color-secondary: #7bb9ff;
     --color-secondary-accent: #e20de94f;
     --color-shadow: #bbbbbb20;
     --color-table: #0097fc;
